switch to jpgen 0.2.0